--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-web-api</artifactId>
+            <version>8.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.10.0</version>
@@ -90,7 +96,6 @@
             <version>3.8.0</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 </project>
